--- a/frontend/src/components/Draw/Draw.css
+++ b/frontend/src/components/Draw/Draw.css
@@ -3,13 +3,15 @@
 }
 .main-row {
   /* height: 920px; */
+  display: flex;
+  height: 100vh;
 }
 
 .col1 {
   border: #000000 solid 2px;
   padding: 0;
-  width: 250px;
-  height: 100vh;
+  width: 350px;
+  /* flex: ; */
 }
 
 .col2 {
